# agentflow

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.codex/: config.toml
.github/: pull_request_template.md
.openhands/: hooks.json
docs/: agent-artifacts.md  agent-workflow.md  cli-contract.json  command-risk.md  compatibility.md  detect-stuck.md  draft-plan.md  golem-integration.md  mcp.md  packaging.md  pypi-publishing.md  recommend-workflow.md  review-checklist.md  roadmap.md  schema-freeze-audit.md  security-model.md  single-writer-leases.md  stability.md  stop-hook.md  verification-matrix.md  workflow-packs.md
hooks/: stop-gate.sh
schemas/: aggregation.schema.json  amendments.schema.json  assumptions.schema.json  capability-receipts.schema.json  command-receipts.schema.json  context-receipts.schema.json  drift-report.schema.json  evidence.schema.json  execution-contract.schema.json  file-receipts.schema.json  plan-lock.schema.json  proof-pack.schema.json  review-manifest.schema.json  review-runs.schema.json  runtime-config.schema.json  runtime-snapshot.schema.json  step-runs.schema.json  task-brief.schema.json  verification-runs.schema.json  workflow-contract.schema.json  workflow-pack.schema.json
scripts/: build_zipapp.py  check_distribution.py  check_release.py  check_schema_soak.py  gen_cli_contract.py
tests/: test_aggregate.py  test_artifact_versioning.py  test_build_zipapp.py  test_capabilities.py  test_ci_proof_bundle.py  test_cli.py  test_events.py  (+36 more)
(+147 files in other folders)
